--- a/src/app/main/movie-detail/banner/banner.component.scss
+++ b/src/app/main/movie-detail/banner/banner.component.scss
@@ -28,11 +28,7 @@
     height: 44px;
     border-radius: 50%;
     padding: 18px 20px 18px 28px;
-    &:hover {
-      &::before {
-        background: #db1778;
-      }
-    }
+
     span {
       display: block;
       position: relative;
@@ -43,6 +39,7 @@
       border-top: 22px solid transparent;
       border-bottom: 22px solid transparent;
     }
+    &::after,
     &::before {
       content: "";
       position: absolute;
@@ -55,6 +52,26 @@
       display: block;
       z-index: 0;
       transform: translateX(-50%) translateY(-50%);
+    }
+    &:hover {
+      &::after {
+        background: #db1778;
+      }
+    }
+    &::before {
+      animation: pulse-border 1.5s ease-out infinite;
+    }
+    @keyframes pulse-border {
+      from {
+        width: 80px;
+        height: 80px;
+        opacity: 0.7;
+      }
+      to {
+        width: 120px;
+        height: 120px;
+        opacity: 0;
+      }
     }
   }
 }
