--- a/src/app/main/theater/theater.component.scss
+++ b/src/app/main/theater/theater.component.scss
@@ -37,5 +37,68 @@
         opacity: 1;
       }
     }
+    .phim {
+      .rightside {
+        aspect-ratio: 2/3;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        overflow: hidden;
+      }
+      .leftside {
+        background-color: #00000096;
+        position: relative;
+      }
+      .chiTiet {
+        .top {
+          p {
+            font-size: 27px;
+          }
+          .star {
+            color: #ffb90b;
+          }
+        }
+        .bottom {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          span {
+            font-weight: 500;
+          }
+        }
+      }
+      .maLichChieu {
+        & > div {
+          gap: 10px;
+        }
+        .lichChieu {
+          border-radius: 8px;
+          border: 2px solid #e4e4e4;
+          padding: 5px;
+          cursor: pointer;
+          &:hover {
+            color: #ffb90b;
+          }
+        }
+      }
+      .age_restricted {
+        background-image: url("https://touchcinema.com/images/age.png?ed437e4954f2e325048864c3d83e2d1e");
+        background-position: center;
+        background-size: contain;
+        font-size: 17px;
+        font-weight: 700;
+
+        color: #000;
+        width: 63px;
+        height: 72px;
+        background-repeat: no-repeat;
+        text-align: center;
+        line-height: 57px;
+        position: absolute;
+        top: 0px;
+        right: 20px;
+      }
+    }
   }
 }
