--- a/src/app/main/theater/theater.component.scss
+++ b/src/app/main/theater/theater.component.scss
@@ -60,6 +60,7 @@
       .leftside {
         background-color: #00000096;
         position: relative;
+        padding: 2vw;
       }
       .chiTiet {
         .top {
@@ -86,16 +87,17 @@
         }
       }
       .maLichChieu {
-        & > div {
+        .lichChieuContainer {
           gap: 10px;
-        }
-        .lichChieu {
-          border-radius: 8px;
-          border: 2px solid #e4e4e4;
-          padding: 5px;
-          cursor: pointer;
-          &:hover {
-            color: #ffb90b;
+          .lichChieu {
+            border-radius: 8px;
+            border: 2px solid #e4e4e4;
+            padding: 5px;
+            cursor: pointer;
+            &:hover {
+              color: #ffb90b;
+              border-color: #ffb90b;
+            }
           }
         }
       }
